--- a/whatsapp_without_contact/whatsappcont.css
+++ b/whatsapp_without_contact/whatsappcont.css
@@ -1,151 +1,120 @@
-        body {
-            background-color: #222831;
-            font-family: Arial, Helvetica, sans-serif;
-            top: 0;
-            color: #eeeeee;
-            justify-content: center;
-        }
-        
-        .bigbox {
-            border-radius: 49px 49px 49px 49px;
-            width: 1330px;
-            height: 100px;
-            position: absolute;
-            top: 18px;
-            right: 15px;
-            border: 2.5px solid #32e0c4;
-            font-size: 60pt;
-            text-align: center;
-            color: #eeeeee;
-        }
-        /*         
-        .mboxtxt {
-            padding: 20px;
-        }
-        
-        .mboxtxt:hover {
-            padding-right: 50px;
-            padding-left: 50px;
-        } */
-        
-        .mbox {
-            text-align: center;
-            line-height: 100px;
-            font-size: 36pt;
-            position: absolute;
-            top: 200px;
-            left: 120px;
-            width: 475px;
-            height: 100px;
-            border: 2px solid #32e0c4;
-        }
-        
-        .mbox::after {
-            /* content: '\xea72'; */
-            content: '\00bb';
-            color: #32e0c4;
-            font-size: 36pt;
-            float: right;
-            display: none;
-            opacity: 0;
-            overflow: hidden;
-            width: 0;
-        }
-        
-        .mbox:hover {
-            margin-bottom: 10px;
-            transition-duration: 0.5s;
-            cursor: pointer;
-            box-shadow: 20px 15px 5px #393e46;
-            /* padding-right: 20px; */
-            /* padding-left: 20px; */
-            /* padding-bottom: 5px; */
-            padding: 5px;
-        }
-        
-        .mbox:hover::after {
-            display: contents;
-            opacity: 1;
-            width: 20px;
-        }
-        
-        .stepbox {
-            width: 425px;
-            height: 215px;
-            position: absolute;
-            top: 335px;
-            left: 145px;
-            border: 4px dotted #32e0c4;
-        }
-        
-        .line {
-            height: 490px;
-            border-left: 3px solid #32e0c4;
-            position: absolute;
-            top: 150px;
-            margin-bottom: 20px;
-            left: 50%;
-        }
-        
-        .mtbox {
-            text-align: center;
-            line-height: 100px;
-            font-size: 36pt;
-            position: absolute;
-            top: 200px;
-            right: 120px;
-            width: 475px;
-            height: 100px;
-            border: 2px solid #32e0c4;
-        }
-        
-        .mtbox::after {
-            /* content: '\xea72'; */
-            content: '\00bb';
-            color: #32e0c4;
-            font-size: 36pt;
-            float: right;
-            display: none;
-            opacity: 0;
-            overflow: hidden;
-            width: 0;
-        }
-        
-        .mtbox:hover {
-            margin-bottom: 10px;
-            transition-duration: 0.5s;
-            cursor: pointer;
-            box-shadow: 20px 15px 5px #393e46;
-            /* padding-right: 20px; */
-            /* padding-left: 20px; */
-            /* padding-bottom: 5px; */
-            padding: 5px;
-        }
-        
-        .mtbox:hover::after {
-            display: contents;
-            opacity: 1;
-            width: 20px;
-        }
-        
-        .stepboxmirror {
-            width: 425px;
-            height: 215px;
-            position: absolute;
-            top: 335px;
-            right: 145px;
-            border: 4px dotted #32e0c4;
-        }
-        
-        @media screen and (max-width: 1000px) {
-            .bigbox,
-            .mbox,
-            .mtbox,
-            .stepbox,
-            .line,
-            .stepboxmirror {
-                width: 100%;
-                height: auto;
-                position: static;
-            }
-        }
+       * {
+           top: 0 !important;
+           left: 0 !important;
+           margin: 0 !important;
+           padding: 0 !important;
+       }
+       
+       body {
+           background-color: #222831 !important;
+           font-family: Arial, Helvetica, sans-serif !important;
+           color: #eeeeee !important;
+       }
+       
+       .title {
+           border: 2.5px solid #32e0c4;
+           font-size: 30pt;
+           text-align: center;
+           padding: 10px !important;
+           margin: 15px !important;
+       }
+       
+       a {
+           text-decoration: none !important;
+           color: #eeeeee !important;
+       }
+       
+       .pm {
+           padding: 10px !important;
+           margin: 20px !important;
+       }
+       
+       .pml {
+           /* padding: 5px !important; */
+           margin: 10px !important;
+       }
+       
+       .pmt {
+           padding: 10px !important;
+           margin: 35px !important;
+       }
+       
+       .borderr {
+           border-right: 3px solid #32e0c4;
+           margin-bottom: 20px;
+           height: 70vh;
+           margin: 80px !important;
+       }
+       
+       .mbox {
+           text-align: center;
+           line-height: 80px;
+           font-size: 30pt;
+           border: 2px solid #32e0c4;
+       }
+       
+       .mbox::after {
+           content: '\00bb';
+           color: #32e0c4;
+           font-size: 36pt;
+           float: right;
+           display: none;
+           opacity: 0;
+           overflow: hidden;
+           width: 0;
+       }
+       
+       .mbox:hover {
+           margin-bottom: 10px;
+           transition-duration: 0.5s;
+           cursor: pointer;
+           box-shadow: 20px 15px 5px #393e46;
+           padding: 5px;
+       }
+       
+       .mbox:hover::after {
+           display: contents;
+           opacity: 1;
+           width: 20px;
+       }
+       
+       .stepbox {
+           border: 4px dotted #32e0c4;
+       }
+       
+       .steptxt {
+           padding: 15px !important;
+           line-height: 30pt !important;
+           font-size: small !important;
+       }
+       
+       .mtbox {
+           text-align: center;
+           line-height: 80px;
+           font-size: 30pt;
+           border: 2px solid #32e0c4;
+       }
+       
+       .mtbox::after {
+           content: '\00bb';
+           color: #32e0c4;
+           font-size: 36pt;
+           float: right;
+           display: none;
+           opacity: 0;
+           overflow: hidden;
+           width: 0;
+       }
+       
+       .mtbox:hover {
+           margin-bottom: 10px;
+           transition-duration: 0.5s;
+           cursor: pointer;
+           box-shadow: 20px 15px 5px #393e46;
+       }
+       
+       .mtbox:hover::after {
+           display: contents;
+           opacity: 1;
+           width: 20px;
+       }
