--- a/resume/mainpage.css
+++ b/resume/mainpage.css
@@ -11,7 +11,7 @@ body {
 
 .profileborder {
     width: 10%;
-    height: 10%;
+    /* height: 10%; */
     top: 5vh;
     left: 25vw;
     position: relative;
@@ -20,12 +20,12 @@ body {
 
 .image {
     border: 3px solid #8785a2;
-    border-radius: 50%;
+    border-radius: 20%;
     box-shadow: 5px 20px 60px #808080;
     /* -webkit-box-reflect: below 0px linear-gradient(to bottom, transparent, #8785a2); */
-    width: 100%;
-    height: 100%;
-    vertical-align: middle;
+    width: 90%;
+    /* height: 30%; */
+    /* vertical-align: middle; */
 }
 
 a {
@@ -143,6 +143,7 @@ a {
     background-size: 77%;
     background-position: center;
     background-repeat: no-repeat;
+    opacity: 0.5;
 }
 
 #profilesec {
@@ -241,7 +242,7 @@ a {
     margin-bottom: 20px;
 }
 
-iframe {
+.iframe {
     position: relative;
     left: 3.5vw;
     width: 90%;
@@ -278,6 +279,27 @@ iframe {
     left: 2.5vw;
     padding: 10px;
     margin-bottom: 20px;
+}
+
+#portfoliosec {
+    border: 5px groove #eeb68f;
+    background-color: #f6f6f6;
+    /* border: 1px solid #000000; */
+    top: 65vh;
+    width: 95%;
+    height: 100%;
+    display: none;
+    position: absolute;
+    /* float: left; */
+    left: 2.5vw;
+    padding: 30px;
+    margin-bottom: 20px;
+}
+
+.pb {
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid;
 }
 
 ul {
